<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/surveyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        
             <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/question00" >
            
        </TextView>
        
        <Button
                android:id="@+id/btnNotSig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNotSigClicked"
                android:text="@string/not_button_title" />
        
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/question0" >
            
        </TextView>
        
        <EditText
            android:id="@+id/locationname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" >
        </EditText>
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/question1" >
        </TextView>

        <Spinner
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/whereothertext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/other_hint" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/question2" >
        </TextView>

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx1" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx2" />

        <CheckBox
            android:id="@+id/check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx3" />

        <CheckBox
            android:id="@+id/check4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx4" />

        <CheckBox
            android:id="@+id/check5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx5" />

        <CheckBox
            android:id="@+id/check6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx6" />

        <CheckBox
            android:id="@+id/check7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx7" />

        <CheckBox
            android:id="@+id/check8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx8" />

        <CheckBox
            android:id="@+id/check9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx9" />

        <CheckBox
            android:id="@+id/check10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx10" />

        <CheckBox
            android:id="@+id/check11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx11" />

        <CheckBox
            android:id="@+id/check12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx12" />

        <CheckBox
            android:id="@+id/check13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx13" />

        <CheckBox
            android:id="@+id/check14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx14" />

        <CheckBox
            android:id="@+id/check15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx15" />

        <CheckBox
            android:id="@+id/check16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbx16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/question3" >
        </TextView>

        <Spinner
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
        

       
        <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSaveClicked"
                android:text="@string/save_button_title" />

    </LinearLayout>

</ScrollView>